feature: background sync for Health Connect  (#152)